# my-local-ai-environment

./: .dockerignore  DOCKERFILE  README.md  cli.py  constants.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
mcp/resources/: file.py
my_mcp/dataclasses/: file.py
my_mcp/resources/: file.py
my_mcp/tools/: write_file.py
tests/: conftest.py  test_resources.py  test_tools.py
